# cfuture

./: .clang-format  .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  cfuture.hpp  gcovr.md  test.cc
.github/workflows/: linux.yml
test/: test.cc
